--- a/package.json
+++ b/package.json
@@ -1,30 +1,30 @@
 {
   "name": "@vue-interface/breadcrumb",
   "version": "0.9.3",
-  "description": "Vue list group component",
-  "main": "index.js",
+  "description": "A Vue breadcrumb component.",
+  "files": [
+    "dist",
+    "tailwindcss"
+  ],
+  "main": "./dist/breadcrumb.umd.js",
+  "module": "./index.js",
+  "browserslist": "last 2 versions, > 0.5%, ie >= 11",
   "scripts": {
-    "watch": "npm run serve",
-    "serve": "vue-cli-service build --target lib --name=Breadcrumb ./main.vue --watch",
-    "build": "vue-cli-service build --target lib --name=Breadcrumb ./main.vue",
-    "lint": "vue-cli-service lint",
-    "fix": "vue-cli-service lint --fix",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
     "pre-release": "npm run build; git add . -A; git commit -m 'pre-release commit'",
     "release-patch": "npm run pre-release && npm version patch -m \"%s\" && npm run release;",
     "release-minor": "npm run pre-release && npm version minor -m \"%s\" && npm run release;",
     "release-major": "npm run pre-release && npm version major -m \"%s\" && npm run release;",
-    "release": "git add . -A; git commit; git push --tags origin; npm publish;",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "docs:dev": "./node_modules/.bin/vuepress dev docs",
-    "docs:build": "./node_modules/.bin/vuepress build docs"
+    "release": "git add . -A; git commit; git push --tags origin; npm publish;"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/vue-interface/breadcrumb.git"
   },
   "keywords": [
-    "List",
-    "Group",
+    "Breadcrumb",
     "Vue",
     "Component",
     "Tailwind",
@@ -37,25 +37,22 @@
   },
   "homepage": "https://github.com/vue-interface/breadcrumb/docs#readme",
   "dependencies": {
-    "@vue-interface/tailwindcss": "^0.1.4",
-    "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "@vue-interface/variant": "^1.0.12",
-    "@vue/cli-plugin-babel": "^4.0",
-    "@vue/cli-plugin-eslint": "^4.0",
-    "@vue/cli-service": "^4.0",
-    "@vuepress/plugin-register-components": "^1.5.0",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@vue-interface/tailwindcss": "^0.2.10",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.1.0",
+    "babel-preset-vue": "^2.0.2",
+    "change-case": "^4.1.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
-    "hex-to-rgba": "^2.0.1",
-    "markdown-it-meta": "0.0.1",
-    "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.6.0",
-    "vue-template-compiler": "^2.6.11",
-    "vuepress": "^1.5.0",
-    "vuepress-plugin-template-constants": "^0.2.1"
+    "pascalcase": "^2.0.0",
+    "postcss": "^8.4.6",
+    "postcss-inline-svg": "^5.0.0",
+    "tailwindcss": "^3.0.18",
+    "vite": "^2.7.2",
+    "vite-plugin-vue2": "^1.9.3"
   }
 }
